istio/mailhog/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mailhog
  namespace: test-istio
spec:
  hosts:
  - "test.eni.yannig.ovh"
  gateways:
  - mailhog-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8025
        host: mailhog
